@@ -214,7 +214,7 @@ octave_base_value::do_multi_index_op (int nargout, const octave_value_list& idx,
 }
 
 idx_vector
-octave_base_value::index_vector (void) const
+octave_base_value::index_vector (bool /* require_integers */) const
 {
   std::string nm = type_name ();
   error ("%s type invalid as index value", nm.c_str ());
